[package]
name = "bntui"
version = "0.1.2"
edition = "2024"
description = "Terminal block explorer for Blocknet privacy blockchain"
license = "MIT"
repository = "https://github.com/obselate/bntui"
homepage = "https://github.com/obselate/bntui"
keywords = ["terminal", "blockchain", "tui", "ratatui", "cryptocurrency"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
color-eyre = "0.6"
clap = { version = "4", features = ["derive"] }
arboard = "3"
